dataset1235/2025-2/2947369575/users/3195650647/executions/1003782500_3921830315.log
== SUBMISSION (2025-08-29 19:00:21)
-- CODE: 
l = float(input())
v1 = 2.86
v2 = 50.00
p = 34
t1 = l*v1
t2 = t1+v2
t3 = t2*(p/100)
t4 = t2+t3
print(round(t4,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:39:26)
-- CODE: 
litros = float(input())
p = 2.86
oleo = 50.00
p = x*(x/100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = x*(x/100)
        ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = x*(x/100)
        ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = x*(x/100)
        ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = x*(x/100)
        ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = x*(x/100)
        ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = x*(x/100)
        ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:38:54)
-- CODE: 
l = float(input())
v1 = 2.86
v2 = 50.00
p = 34
t1 = l*v1
t2 = t1+v2
t3 = t2*(p/100)
t4 = t2+t3
print(round(t4,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:15:45)
-- CODE: 
litros = float(input())
p = 2.86
oleo = 50.00
icms = 34/100

v = p*litros
c = v*icms
f = v+c
t = f+oleo
print(round(t,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
89.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
617.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
241.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
384.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
962.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
213.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-29 18:43:33)
-- CODE: 
liroos = float(input())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
None
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
None
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
None
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
None
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
None
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-29 18:45:12)
-- CODE: 
l = float(input())
v1 = 2.86
v2 = 50.00
p = l+(p*34/100)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = l+(p*34/100)
           ^
NameError: name 'p' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = l+(p*34/100)
           ^
NameError: name 'p' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = l+(p*34/100)
           ^
NameError: name 'p' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = l+(p*34/100)
           ^
NameError: name 'p' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = l+(p*34/100)
           ^
NameError: name 'p' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = l+(p*34/100)
           ^
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:57:53)
-- CODE: 
litros = float(input())
p = 2.86
oleo = 50.00
icms = 34/100
v = p*litros
c = v*icms
f = v+c
t = f+oleo
print(round(t,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
89.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
617.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
241.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
384.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
962.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
213.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:50:47)
-- CODE: 
litros = float(input())
p = 2.86
oleo = 50.00
icms = (34/100)
c = litros * icms
t = c+icms
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
None
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
None
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
None
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
None
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
None
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:50:05)
-- CODE: 
litros = float(input())
p = 2.86
oleo = 50.00
icms = (34/100)
c = litros * icms
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
None
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
None
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
None
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
None
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
None
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-29 18:42:02)
-- CODE: 
litros = float(input())
p = 2.86
oleo = 50.00
icms = 34/100

v = p*litros
c = v*icms
f = v+c
t = f+oleo
print(round(t,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
89.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
617.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
241.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
384.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
962.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
213.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
